# palank-rag

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md
.claude-plugin/: plugin.json
docs/: .bkit-memory.json  .pdca-status.json
docs/01-plan/features/: local-file-ingest.plan.md
skills/rag/: SKILL.md
src/: lib.rs  main.rs
src/cli/: mod.rs
src/collector/: mod.rs
src/embedding/: mod.rs
src/extractor/: image.rs  mod.rs  pdf.rs
src/knowledge/: chunker.rs  hybrid.rs  lance.rs  mod.rs  store.rs  vector.rs
src/scraper/: mod.rs
