[package]
name = "palank-rag"
version = "0.1.0"
edition = "2021"
authors = ["PALAN-K"]
description = "로컬 하이브리드 RAG 시스템 - LanceDB + FTS5"
license = "MIT"
repository = "https://github.com/PALAN-K/palank-rag"
keywords = ["rag", "vector-search", "lancedb", "fts5"]
categories = ["command-line-utilities", "database"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# HTTP
reqwest = { version = "0.11", features = ["json"] }

# Database
rusqlite = { version = "0.31", features = ["bundled", "vtab"] }

# Vector DB
lancedb = "0.15"
arrow-array = "53"
arrow-schema = "53"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
url = "2"
dirs = "5"

# HTML parsing (for scraper)
scraper = "0.19"
html5ever = "0.27"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
